# ordius

./: .editorconfig  .gitignore  Cargo.toml  README.md  _typos.toml  clippy.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: full_smoke.rs  gui.rs  help.rs  import_export.rs  nodes.rs  run.rs  runs.rs  secrets.rs  workflows.rs
crates/desktop/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/src/: commands.rs  dto.rs  lib.rs  main.rs  state.rs
crates/desktop/ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/desktop/ui/src/: App.tsx  jsx-global.d.ts  main.tsx  vite-env.d.ts
crates/desktop/ui/src/components/: NoticeBanner.tsx  PillRow.tsx  SectionTitle.tsx  Wordmark.tsx
crates/desktop/ui/src/components/canvas/: Canvas.tsx  NodeCard.tsx  demoWorkflow.ts  index.ts  types.ts
crates/desktop/ui/src/components/chrome/: EditorTopBar.tsx  Resizer.tsx  TopBar.tsx  WorkflowTabStrip.tsx  WorkspaceSelector.tsx
crates/desktop/ui/src/components/dialogs/: RunDialog.tsx  index.ts
crates/desktop/ui/src/components/home/: Hero.tsx  LeftRail.tsx  RecentRunRow.tsx  StatusRibbon.tsx  WorkflowCard.tsx
crates/desktop/ui/src/components/icons/: index.tsx
crates/desktop/ui/src/components/palette/: BracketHeader.tsx  Palette.tsx  index.ts
crates/desktop/ui/src/components/properties/: EnvPicker.tsx  PropertiesPanel.tsx  ResourcePicker.tsx  index.ts  primitives.tsx
crates/desktop/ui/src/components/run/: RunPanel.tsx  index.ts
crates/desktop/ui/src/data/: categories.ts  demoHistory.ts  demoHome.ts
crates/desktop/ui/src/engine/: commands.ts  types.ts
crates/desktop/ui/src/lib/: format.ts  router.ts  windowDrag.ts
crates/desktop/ui/src/routes/: Editor.tsx  History.tsx  Home.tsx  Settings.tsx
crates/desktop/ui/src/styles/: tokens.css
crates/engine/: Cargo.toml  build.rs
crates/engine/examples/: ssh_spike.rs
crates/engine/seeds/: starter-hello.json  starter-pipeline.json  starter-schedule.json
crates/engine/src/: checkpoints.rs  emitter.rs  environment.rs  error.rs  events.rs  events_registry.rs  lib.rs  loader.rs  manifests.rs  namespaces.rs  recorder.rs  registry.rs  run.rs  secrets.rs  seeds.rs  settings.rs  system_status.rs  template.rs  triggers.rs  validation.rs  workflows.rs  workspaces.rs
crates/engine/src/db/: migrations.rs  mod.rs  tests.rs
crates/engine/src/environment/: custom.rs  detect.rs  local.rs  mod.rs  types.rs  wsl.rs
crates/engine/src/environment/runtime/: boot_probe.rs  builtin.rs  catalog.rs  dispatcher.rs  env.rs  env_registry.rs  error.rs  fake.rs  helper.rs  helper_wire.rs  local.rs  mod.rs  plan.rs  registry.rs  resource.rs  run_catalog.rs  run_snapshot.rs  search_paths.rs  transport.rs  user_file.rs  workflow_scope.rs
crates/engine/src/environment/runtime/ssh/: auth.rs  bootstrap.rs  config.rs  connection.rs  dispatcher.rs  exec.rs  host_key.rs  mod.rs  transport.rs  workspace.rs
crates/engine/src/environment/runtime/workspace/: manager.rs  mod.rs  persistent.rs  safe_or_diverge.rs  safety.rs  transport.rs
crates/engine/src/environment/runtime/wsl/: bootstrap.rs  dispatcher.rs  enumerate.rs  host_direct.rs  mod.rs  path.rs  process.rs  shell_fallback.rs  transport.rs
crates/engine/src/events/: tests.rs
crates/engine/src/executor/: container.rs  context.rs  dispatcher.rs  http_client.rs  in_process.rs  mod.rs  subprocess.rs  supervisor.rs  test_support.rs
crates/engine/src/executor/builtins/: agent.rs  checkpoint.rs  coding_agent.rs  compose.rs  condition.rs  delay.rs  file.rs  http.rs  kv.rs  llm.rs  loop_for.rs  mod.rs  notify.rs  parallel.rs  test_support.rs  transform.rs  util.rs  wait_event.rs
crates/engine/src/executor/builtins/condition/: tests.rs
crates/engine/src/executor/builtins/delay/: tests.rs
crates/engine/src/executor/builtins/transform/: tests.rs
crates/engine/src/manifests/: tests.rs
crates/engine/src/recorder/: tests.rs
crates/engine/src/scheduler/: mod.rs  state.rs  tests.rs
crates/engine/src/secrets/: tests.rs
crates/engine/src/settings/: tests.rs
crates/engine/src/template/: tests.rs
crates/engine/src/types/: edge.rs  env.rs  mod.rs  node.rs  node_type.rs  port.rs  stream_mode.rs  workflow.rs
crates/engine/src/workflows/: tests.rs
crates/engine/src/workspaces/: tests.rs
crates/engine/tests/: agent_smoke.rs  boot_probe_smoke.rs  build_run_snapshot_smoke.rs  child_workflow_env_validation.rs  coding_agent_node.rs  compose_smoke.rs  config_template_smoke.rs  crash_recovery.rs  env_local_resource_crud.rs  env_local_scope_install.rs  helper_protocol_compat.rs  host_direct_ipc.rs  llm_smoke.rs  loop_escape_dormant.rs  loop_for_run.rs  manifest_run.rs  manifest_smoke.rs  node_config_phase_d.rs  output_spill_smoke.rs  parallel_smoke.rs  real_wsl_termination.rs  recorder_smoke.rs  refresh_environment_smoke.rs  resource_registry_seeding.rs  run_minimal.rs  run_multistep.rs  run_snapshot_isolation.rs  runtime_port_collision.rs  scheduler_phase_e.rs  secrets_smoke.rs  seeds_smoke.rs  ssh_boundary.rs  ssh_real_dispatcher.rs  target_env_validation_smoke.rs  wsl_real_dispatcher.rs
crates/ordius-helper/: Cargo.toml
crates/ordius-helper/src/: exec.rs  lib.rs  main.rs  probe.rs  protocol.rs
crates/ordius-helper/tests/: smoke.rs
scripts/: build-helpers.ps1  build-helpers.sh  build-win.sh  ssh-test-container.sh
