[workspace]
resolver = "2"
members = ["crates/engine", "crates/cli", "crates/desktop", "crates/ordius-helper"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Wintersta7e <Wintersta7e@users.noreply.github.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "process", "signal", "fs", "io-util", "io-std", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml is deprecated upstream; using the actively-maintained fork via Cargo package rename.
serde_yaml = { version = "0.10", package = "serde_yaml_ng" }
toml = "1"

# Errors / logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Utilities
arc-swap = "1"
parking_lot = "0.12"
url = { version = "2", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.11"
wait-timeout = "0.2"
which = "6"
glob = "0.3"
humantime = "2"
cron = "0.16"
notify = "8"
notify-debouncer-mini = "0.7"
bollard = "0.18"
axum = "0.8"

# Storage
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"

# HTTP / external
base64 = "0.22"
bytes = { version = "1", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "stream", "query"] }
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
signal-hook = "0.4"
jsonpath-rust = "1"
keyring = "4"
keyring-core = "1"

# SSH
russh = { version = "=0.61.1", default-features = false, features = ["aws-lc-rs"] }
russh-sftp = { version = "=2.3.0" }

# CLI
clap = { version = "4", features = ["derive", "env"] }
rpassword = "7"

# Desktop (Tauri 2)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Test-only (hoisted to workspace so all crates resolve the same version)
tempfile = "3"
serial_test = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
let_underscore_drop = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Pragmatic allows
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
