[package]
name = "ordius-desktop"
description = "Ordius Tauri 2 desktop application."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "ordius"
path = "src/main.rs"

[lib]
name = "ordius_desktop"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ordius-engine = { path = "../engine" }
tauri = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
keyring = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
