[package]
name = "ordius-desktop"
description = "Ordius Tauri 2 desktop application."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false # personal tool — not published to crates.io

[lints]
workspace = true

[[bin]]
name = "ordius"
path = "src/main.rs"

[lib]
name = "ordius_desktop"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Production builds must embed the frontend assets via Tauri's
# `custom-protocol`, otherwise the runtime falls back to `devUrl`
# (http://localhost:1420) and the webview shows ERR_CONNECTION_REFUSED
# on a host with no Vite dev server. `cargo tauri dev` passes
# `--no-default-features` so dev mode still works.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
ordius-engine = { path = "../engine" }
tauri = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
keyring = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
