[package]
name = "ordius-engine"
description = "Ordius workflow engine: DAG scheduler, executor, run recorder. No UI deps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
jsonpath-rust = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
keyring-core = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
serial_test = { workspace = true }
keyring = { workspace = true }
wiremock = { workspace = true }
