[package]
name = "ordius-helper"
description = "In-environment runner for Ordius — probes resources and execs shell-free argv-only commands via a JSON-over-stdin protocol."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ordius-helper"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ureq = { workspace = true }
which = { workspace = true }
